# RX671_MCR

./: .clangd  .gitignore  CMakeLists.txt  README.md  RX671_MCR HardwareDebug.launch  RX671_MCR.Natsuki.mtud  RX671_MCR.mtpj  RX671_MCR.rcpe  RX671_MCR.scfg  compile_flags.txt  cross.cmake  dbsct.c  hwsetup.c  intprg.c  resetprg.c  vect.h  vecttbl.c
RX671_MCR/: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  RX671_MCR HardwareDebug.launch  RX671_MCR.scfg  compile_flags.txt  duty.m
RX671_MCR/inc/: BMI088.h  Motor.h  PIDcontrol.h  SDcard.h  WS2812C.h  battery.h  control.h  emergencyStop.h  encoder.h  gui.h  images.h  linesensor.h  setup.h  ssd1351.h  switch.h  timer.h
RX671_MCR/output/: migration_report_2025-04-29-14-01-02.html
RX671_MCR/src/: BMI088.c  Motor.c  PIDcontrol.c  RX671_MCR.c  SDcard.c  WS2812C.c  battery.c  control.c  emergencyStop.c  encoder.c  fonts.c  gui.c  images.c  linesensor.c  setup.c  ssd1351.c  switch.c  timer.c
RX671_MCR/src/smc_gen/Config_DMAC0/: Config_DMAC0.c  Config_DMAC0.h  Config_DMAC0_user.c
RX671_MCR/src/smc_gen/Config_ICU/: Config_ICU.h  Config_ICU_user.c
RX671_MCR/src/smc_gen/Config_MTU0/: Config_MTU0.c  Config_MTU0.h  Config_MTU0_user.c
RX671_MCR/src/smc_gen/Config_MTU1/: Config_MTU1.h  Config_MTU1_user.c
RX671_MCR/src/smc_gen/Config_MTU2/: Config_MTU2.c  Config_MTU2.h  Config_MTU2_user.c
RX671_MCR/src/smc_gen/Config_MTU3/: Config_MTU3.c  Config_MTU3.h  Config_MTU3_user.c
RX671_MCR/src/smc_gen/Config_MTU4/: Config_MTU4.c  Config_MTU4.h
RX671_MCR/src/smc_gen/Config_MTU6/: Config_MTU6.c  Config_MTU6.h  Config_MTU6_user.c
RX671_MCR/src/smc_gen/Config_MTU7/: Config_MTU7.c  Config_MTU7.h
RX671_MCR/src/smc_gen/Config_PORT/: Config_PORT.c  Config_PORT_user.c
RX671_MCR/src/smc_gen/Config_RSPI2/: Config_RSPI2.c  Config_RSPI2.h  Config_RSPI2_user.c
RX671_MCR/src/smc_gen/Config_S12AD0/: Config_S12AD0.c  Config_S12AD0.h  Config_S12AD0_user.c
RX671_MCR/src/smc_gen/Config_S12AD1/: Config_S12AD1.c  Config_S12AD1.h  Config_S12AD1_user.c
RX671_MCR/src/smc_gen/Config_SCI0/: Config_SCI0.c  Config_SCI0.h  Config_SCI0_user.c
RX671_MCR/src/smc_gen/Config_SCI1/: Config_SCI1.c  Config_SCI1.h
RX671_MCR/src/smc_gen/Config_SCI10/: Config_SCI10.c  Config_SCI10.h  Config_SCI10_user.c
RX671_MCR/src/smc_gen/Config_SCI2/: Config_SCI2_user.c
RX671_MCR/src/smc_gen/Config_SCI4/: Config_SCI4.c  Config_SCI4.h  Config_SCI4_user.c
RX671_MCR/src/smc_gen/Config_SCI9/: Config_SCI9.c  Config_SCI9.h  Config_SCI9_user.c
RX671_MCR/src/smc_gen/Config_TPU2/: Config_TPU2.c  Config_TPU2.h  Config_TPU2_user.c
RX671_MCR/src/smc_gen/Config_TPU3/: Config_TPU3.c  Config_TPU3.h  Config_TPU3_user.c
RX671_MCR/src/smc_gen/Config_TPU4/: Config_TPU4.c  Config_TPU4.h  Config_TPU4_user.c
RX671_MCR/src/smc_gen/Config_TPU5/: Config_TPU5.c  Config_TPU5.h  Config_TPU5_user.c
RX671_MCR/src/smc_gen/general/: r_cg_cmt.h  r_cg_dmac.h  r_cg_dmac_user.c  r_cg_hardware_setup.c  r_cg_interrupt_handlers.h  r_cg_port.h  r_cg_rspi.h  r_cg_s12ad.h  r_cg_tpu.h  r_smc_cgc.c  r_smc_entry.h  r_smc_interrupt.c  r_smc_interrupt.h
RX671_MCR/src/smc_gen/r_bsp/: platform.h
RX671_MCR/src/smc_gen/r_bsp/board/generic_rx671/: hwsetup.c
RX671_MCR/src/smc_gen/r_bsp/mcu/rx671/: mcu_clocks.c  mcu_clocks.h  mcu_interrupts.c  mcu_mapped_interrupts.h  r_bsp_locking.h  vecttbl.c
RX671_MCR/src/smc_gen/r_config/: r_bsp_config.h  r_cmt_rx_config.h  r_dmaca_rx_config.h  r_sdc_sd_rx_config.h  r_sdhi_rx_config.h  r_tfat_driver_rx_config.h  r_tfat_rx_config.h
RX671_MCR/src/smc_gen/r_dmaca_rx/: r_dmaca_rx_if.h  readme.txt
RX671_MCR/src/smc_gen/r_dmaca_rx/src/: r_dmaca_rx.c  r_dmaca_rx_private.h
RX671_MCR/src/smc_gen/r_dmaca_rx/src/targets/rx671/: r_dmaca_rx_target.c  r_dmaca_rx_target.h
RX671_MCR/src/smc_gen/r_pincfg/: Pin.c  Pin.h  r_pinset.h  r_sdhi_rx_pinset.c  r_sdhi_rx_pinset.h
RX671_MCR/src/smc_gen/r_sdc_sdmem_rx/: r_sdc_sd_rx_if.h  readme.txt
RX671_MCR/src/smc_gen/r_sdc_sdmem_rx/src/: r_sdc_sd_cd.c  r_sdc_sd_cmd.c  r_sdc_sd_config.c  r_sdc_sd_initialize.c  r_sdc_sd_int.c  r_sdc_sd_open.c  r_sdc_sd_rx_private.h  r_sdc_sd_trans.c  r_sdc_sd_util.c  r_sdc_sd_wrapper.c
RX671_MCR/src/smc_gen/r_sdc_sdmem_rx/src/mem/: r_sdc_sdmem_initialize.c  r_sdc_sdmem_param.c  r_sdc_sdmem_read.c  r_sdc_sdmem_util.c  r_sdc_sdmem_wrapper.c  r_sdc_sdmem_write.c
RX671_MCR/src/smc_gen/r_sdhi_rx/: r_sdhi_rx_if.h  readme.txt
RX671_MCR/src/smc_gen/r_sdhi_rx/src/: r_sdhi_int.c  r_sdhi_open.c  r_sdhi_rx_private.h  r_sdhi_util.c
RX671_MCR/src/smc_gen/r_sys_time_rx/: readme.txt
RX671_MCR/src/smc_gen/r_sys_time_rx/src/: r_sys_time_rx.c  r_sys_time_rx_private.h
RX671_MCR/src/smc_gen/r_tfat_driver_rx/: r_tfat_driver_rx_if.h  readme.txt
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/: r_tfat_drv_if.c  r_tfat_drv_if_dev.h
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/mmc/: r_tfat_drv_if_mmc.c
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/sdmem/: r_tfat_drv_if_sdmem.c
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/serial_flash/: r_tfat_drv_if_flash.c
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/spi_sdmem/: r_tfat_drv_if_spi_sdmem.c
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/usb/: r_tfat_drv_if_usb.c
RX671_MCR/src/smc_gen/r_tfat_driver_rx/src/device/usb_mini/: r_tfat_drv_if_usb_mini.c
RX671_MCR/src/smc_gen/r_tfat_rx/: readme.txt
RX671_MCR/src/smc_gen/r_tfat_rx/src/: ffconf.h
circuit/: #auto_saved_files#  MCU.kicad_sch  Motor_front.kicad_sch  Motor_rear.kicad_sch  Motor_servo.kicad_sch  Pmod.kicad_sch  Power.kicad_sch  Userinterface.kicad_sch  _autosave-Motor_front.kicad_sch  _autosave-mcr_MotorDriver Ver.3.kicad_pcb  fp-info-cache  fp-lib-table  mcr_MotorDriver Ver.3.kicad_pcb  mcr_MotorDriver Ver.3.kicad_prl  mcr_MotorDriver Ver.3.kicad_pro  mcr_MotorDriver Ver.3.kicad_sch  periferal.sch.kicad_sch  sym-lib-table  ~mcr_MotorDriver Ver.3.kicad_pro.lck
inc/: BMI088.h  fonts.h  ssd1306.h  ssd1306_conf.h  ssd1351.h  timer.h
(+109 files in other folders)
